# risc_ty

./: Makefile  README.md  build.sbt
sims/: .clang-tidy  CMakeLists.txt  Makefile
sims/cmake/: CompilerSetup.cmake  Dependencies.cmake  LibraryTargets.cmake  SourceCollections.cmake  config.cmake
sims/include/demu/: config.hh  cpu_sim.hh  sim.hh  system_sim.hh
sims/include/demu/hal/: device.hh  device_manager.hh  emu.hh  hal.hh  memory.hh  port_handler.hh  rtl.hh
sims/include/demu/hal/axilite/: memory.hh
sims/include/demu/hal/bus/axif/: slave.hh
sims/include/demu/isa/riscv32/: instruction.hh
sims/include/demu/isa/rv32i/: typedefs.hh
sims/lib/: cpu_sim.cc  sim.cc  system_sim.cc
sims/lib/hal/: device_manager.cc  memory.cc
sims/lib/hal/axilite/: memory.cc
sims/lib/hal/bus/axif/: interrupt.cc
sims/lib/hal/bus/axil/: memory.cc  sram.cc  uart.cc
sims/lib/hal/peripheral/sram/: sram.cc
sims/lib/hal/peripheral/uart/: uart.cc
sims/lib/isa/riscv32/: instruction.cc
sims/lib/isa/rv32i/: instruction.cc
sims/lib/isa/rv32im/: instruction.cc
sims/runtime/bare-metal/riscv32/: start.S
sims/tests/: CMakeLists.txt  start.S
sims/tests/asm/: test_basic_clint.asm
sims/tests/coremark/: Makefile  coremark-rv32im.elf
sims/tests/coremark/src/: core_main.c  core_portme.c  core_portme.h
sims/tests/difftest/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
sims/tests/difftest/riscv32/: add.asm  csr.asm  hello_world.c  reduce_sum.c
sims/tools/: CMakeLists.txt
sims/tools/cpu/: main.cpp
sims/tools/debugger/: CMakeLists.txt  breakpoint.cpp  breakpoint.hh  debugger.cpp  debugger.hh  main.cpp
sims/tools/difftest/: CMakeLists.txt  gdb_ref_model.hh  main.cpp
sims/tools/simulator/: CMakeLists.txt  main.cpp
sims/tools/system/: main.cpp
(+82 files in other folders)
